# hello-sgx

app/: Cargo.toml  Enclave_u.c
app/src/: main.rs
enclave/: Cargo.toml  Enclave.edl  Makefile
hello-rust/: Makefile  README.md
hello-rust/app/: Enclave_u.h  build.rs
hello-rust/enclave/: Xargo.toml
hello-rust/enclave/src/: lib.rs
hello-rust/rust-sgx-sdk/edl/: sgx_mem.edl
rust-sgx-sdk/edl/: sgx_file.edl  sgx_tstd.edl
