[package]
name = "hellorust"
version = "1.0.0"
authors = ["osuke"]

[lib]
name = "hellorust"
crate-type = ["staticlib"]

[features]
default = []

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { git = "https://github.com/baidu/rust-sgx-sdk.git" }
sgx_tstd = { git = "https://github.com/baidu/rust-sgx-sdk.git" }

[dependencies]
